[build-system]
    build-backend = "poetry.masonry.api"
    requires = ["poetry-core>=1.7.0", "setuptools>=61"]

[tool.poetry]
    name="pyracf"
    version="1.0a3"
    description="Python interface to RACF using IRRSMO00 RACF Callable Service."
    license = "Apache-2.0"
    authors = [
        "Joe Bostian <jbostian@ibm.com>",
        "Frank De Gilio <degilio@us.ibm.com>",
        "Leonard J. Carcaramo Jr <lcarcaramo@ibm.com>",
        "Elijah Swift <elijah.swift@ibm.com>",
    ]
    maintainers = [
        "Leonard J. Carcaramo Jr <lcarcaramo@ibm.com>",
        "Elijah Swift <elijah.swift@ibm.com>",
    ]
    readme = "README.md"
    repository = "https://github.com/ambitus/pyracf"
    documentation = "https://ambitus.github.io/pyracf/"
    classifiers=[
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: POSIX :: Other",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Security",
        "Topic :: System :: Hardware :: Mainframes",
        "Topic :: System :: Systems Administration",
    ]

[tool.poetry.build]
    script = "build_extension.py"
    generate-setup-file = true

[tool.poetry.dependencies]
    python = ">=3.10"
    defusedxml = ">=0.7.1"

[tool.poetry.group.dev.dependencies]
    isort = ">=5.12.0"
    pre-commit = ">=3.4.0"
    black = ">=23.7.0"
    flake8 = ">=6.1.0"
    pylint = ">=2.17.5"
    coverage = ">=7.3.1"
    wheel = ">=0.41.2"

[tool.isort]
    profile = "black"

[tool.pylint.FORMAT]
    max-args = 6
    max-returns = 7
    max-attributes = 10

[tool.pylint.'MESSAGES CONTROL']
    disable = """
        too-few-public-methods,
        too-many-public-methods,
        import-error,
        pointless-statement
    """
